MyC/y.output
Grammaire

    0 $accept: prog $end

    1 prog: block

    2 block: decl_list inst_list

    3 decl_list: decl decl_list
    4          | %empty

    5 decl: var_decl PV
    6     | struct_decl PV
    7     | fun_decl

    8 var_decl: type vlist

    9 struct_decl: STRUCT ID struct

   10 struct: AO attr AF

   11 attr: type ID
   12     | type ID PV attr

   13 fun_decl: type fun

   14 fun: fun_head fun_body

   15 fun_head: ID PO PF
   16         | ID PO params PF

   17 params: type ID vir params
   18       | type ID

   19 vlist: did vir vlist
   20      | did

   21 did: ID

   22 vir: VIR

   23 fun_body: AO block AF

   24 type: typename pointer
   25     | typename

   26 typename: TINT
   27         | TFLOAT
   28         | VOID
   29         | STRUCT ID

   30 pointer: pointer STAR
   31        | STAR

   32 inst_list: inst PV inst_list
   33          | inst
   34          | %empty

   35 inst: AO block AF
   36     | aff
   37     | ret
   38     | cond
   39     | loop
   40     | PV

   41 aff: ID EQ exp
   42    | exp STAR EQ exp

   43 ret: RETURN exp
   44    | RETURN PO PF

   45 cond: if bool_cond inst
   46     | else inst

   47 bool_cond: PO exp PF

   48 if: IF

   49 else: ELSE

   50 loop: while while_cond inst

   51 while_cond: PO exp PF

   52 while: WHILE

   53 exp: MOINS exp
   54    | exp PLUS exp
   55    | exp MOINS exp
   56    | exp STAR exp
   57    | exp DIV exp
   58    | PO exp PF
   59    | ID
   60    | NUMI
   61    | NUMF
   62    | STAR exp
   63    | NOT exp
   64    | exp INF exp
   65    | exp SUP exp
   66    | exp EQUAL exp
   67    | exp DIFF exp
   68    | exp AND exp
   69    | exp OR exp
   70    | exp ARR ID
   71    | exp DOT ID
   72    | app

   73 app: ID PO args PF

   74 args: arglist
   75     | %empty

   76 arglist: exp VIR arglist
   77        | exp


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUMI (258) 60
NUMF (259) 61
TINT (260) 26
TFLOAT (261) 27
STRUCT (262) 9 29
ID (263) 9 11 12 15 16 17 18 21 29 41 59 70 71 73
AO (264) 10 23 35
AF (265) 10 23 35
PO (266) 15 16 44 47 51 58 73
PF (267) 15 16 44 47 51 58 73
PV (268) 5 6 12 32 40
VIR (269) 22 76
RETURN (270) 43 44
VOID (271) 28
EQ (272) 41 42
IF (273) 48
ELSE (274) 49
WHILE (275) 52
AND (276) 68
OR (277) 69
NOT (278) 63
DIFF (279) 67
EQUAL (280) 66
SUP (281) 65
INF (282) 64
PLUS (283) 54
MOINS (284) 53 55
STAR (285) 30 31 42 56 62
DIV (286) 57
DOT (287) 71
ARR (288) 70
UNA (289)


Non-terminaux, suivis des règles où ils apparaissent

$accept (35)
    à gauche: 0
prog (36)
    à gauche: 1, à droite: 0
block (37)
    à gauche: 2, à droite: 1 23 35
decl_list (38)
    à gauche: 3 4, à droite: 2 3
decl (39)
    à gauche: 5 6 7, à droite: 3
var_decl (40)
    à gauche: 8, à droite: 5
struct_decl (41)
    à gauche: 9, à droite: 6
struct (42)
    à gauche: 10, à droite: 9
attr (43)
    à gauche: 11 12, à droite: 10 12
fun_decl (44)
    à gauche: 13, à droite: 7
fun (45)
    à gauche: 14, à droite: 13
fun_head (46)
    à gauche: 15 16, à droite: 14
params (47)
    à gauche: 17 18, à droite: 16 17
vlist (48)
    à gauche: 19 20, à droite: 8 19
did (49)
    à gauche: 21, à droite: 19 20
vir (50)
    à gauche: 22, à droite: 17 19
fun_body (51)
    à gauche: 23, à droite: 14
type (52)
    à gauche: 24 25, à droite: 8 11 12 13 17 18
typename (53)
    à gauche: 26 27 28 29, à droite: 24 25
pointer (54)
    à gauche: 30 31, à droite: 24 30
inst_list (55)
    à gauche: 32 33 34, à droite: 2 32
inst (56)
    à gauche: 35 36 37 38 39 40, à droite: 32 33 45 46 50
aff (57)
    à gauche: 41 42, à droite: 36
ret (58)
    à gauche: 43 44, à droite: 37
cond (59)
    à gauche: 45 46, à droite: 38
bool_cond (60)
    à gauche: 47, à droite: 45
if (61)
    à gauche: 48, à droite: 45
else (62)
    à gauche: 49, à droite: 46
loop (63)
    à gauche: 50, à droite: 39
while_cond (64)
    à gauche: 51, à droite: 50
while (65)
    à gauche: 52, à droite: 50
exp (66)
    à gauche: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72, à droite: 41 42 43 47 51 53 54 55 56 57 58 62 63 64 65
    66 67 68 69 70 71 76 77
app (67)
    à gauche: 73, à droite: 72
args (68)
    à gauche: 74 75, à droite: 73
arglist (69)
    à gauche: 76 77, à droite: 74 76


État 0

    0 $accept: . prog $end

    TINT    décalage et aller à l'état 1
    TFLOAT  décalage et aller à l'état 2
    STRUCT  décalage et aller à l'état 3
    VOID    décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 4 (decl_list)

    prog         aller à l'état 5
    block        aller à l'état 6
    decl_list    aller à l'état 7
    decl         aller à l'état 8
    var_decl     aller à l'état 9
    struct_decl  aller à l'état 10
    fun_decl     aller à l'état 11
    type         aller à l'état 12
    typename     aller à l'état 13


État 1

   26 typename: TINT .

    $défaut  réduction par utilisation de la règle 26 (typename)


État 2

   27 typename: TFLOAT .

    $défaut  réduction par utilisation de la règle 27 (typename)


État 3

    9 struct_decl: STRUCT . ID struct
   29 typename: STRUCT . ID

    ID  décalage et aller à l'état 14


État 4

   28 typename: VOID .

    $défaut  réduction par utilisation de la règle 28 (typename)


État 5

    0 $accept: prog . $end

    $end  décalage et aller à l'état 15


État 6

    1 prog: block .

    $défaut  réduction par utilisation de la règle 1 (prog)


État 7

    2 block: decl_list . inst_list

    NUMI    décalage et aller à l'état 16
    NUMF    décalage et aller à l'état 17
    ID      décalage et aller à l'état 18
    AO      décalage et aller à l'état 19
    PO      décalage et aller à l'état 20
    PV      décalage et aller à l'état 21
    RETURN  décalage et aller à l'état 22
    IF      décalage et aller à l'état 23
    ELSE    décalage et aller à l'état 24
    WHILE   décalage et aller à l'état 25
    NOT     décalage et aller à l'état 26
    MOINS   décalage et aller à l'état 27
    STAR    décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 34 (inst_list)

    inst_list  aller à l'état 29
    inst       aller à l'état 30
    aff        aller à l'état 31
    ret        aller à l'état 32
    cond       aller à l'état 33
    if         aller à l'état 34
    else       aller à l'état 35
    loop       aller à l'état 36
    while      aller à l'état 37
    exp        aller à l'état 38
    app        aller à l'état 39


État 8

    3 decl_list: decl . decl_list

    TINT    décalage et aller à l'état 1
    TFLOAT  décalage et aller à l'état 2
    STRUCT  décalage et aller à l'état 3
    VOID    décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 4 (decl_list)

    decl_list    aller à l'état 40
    decl         aller à l'état 8
    var_decl     aller à l'état 9
    struct_decl  aller à l'état 10
    fun_decl     aller à l'état 11
    type         aller à l'état 12
    typename     aller à l'état 13


État 9

    5 decl: var_decl . PV

    PV  décalage et aller à l'état 41


État 10

    6 decl: struct_decl . PV

    PV  décalage et aller à l'état 42


État 11

    7 decl: fun_decl .

    $défaut  réduction par utilisation de la règle 7 (decl)


État 12

    8 var_decl: type . vlist
   13 fun_decl: type . fun

    ID  décalage et aller à l'état 43

    fun       aller à l'état 44
    fun_head  aller à l'état 45
    vlist     aller à l'état 46
    did       aller à l'état 47


État 13

   24 type: typename . pointer
   25     | typename .

    STAR  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 25 (type)

    pointer  aller à l'état 49


État 14

    9 struct_decl: STRUCT ID . struct
   29 typename: STRUCT ID .

    AO  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 29 (typename)

    struct  aller à l'état 51


État 15

    0 $accept: prog $end .

    $défaut  accepter


État 16

   60 exp: NUMI .

    $défaut  réduction par utilisation de la règle 60 (exp)


État 17

   61 exp: NUMF .

    $défaut  réduction par utilisation de la règle 61 (exp)


État 18

   41 aff: ID . EQ exp
   59 exp: ID .
   73 app: ID . PO args PF

    PO  décalage et aller à l'état 52
    EQ  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 59 (exp)


État 19

   35 inst: AO . block AF

    TINT    décalage et aller à l'état 1
    TFLOAT  décalage et aller à l'état 2
    STRUCT  décalage et aller à l'état 3
    VOID    décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 4 (decl_list)

    block        aller à l'état 54
    decl_list    aller à l'état 7
    decl         aller à l'état 8
    var_decl     aller à l'état 9
    struct_decl  aller à l'état 10
    fun_decl     aller à l'état 11
    type         aller à l'état 12
    typename     aller à l'état 13


État 20

   58 exp: PO . exp PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 56
    app  aller à l'état 39


État 21

   40 inst: PV .

    $défaut  réduction par utilisation de la règle 40 (inst)


État 22

   43 ret: RETURN . exp
   44    | RETURN . PO PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 57
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 58
    app  aller à l'état 39


État 23

   48 if: IF .

    $défaut  réduction par utilisation de la règle 48 (if)


État 24

   49 else: ELSE .

    $défaut  réduction par utilisation de la règle 49 (else)


État 25

   52 while: WHILE .

    $défaut  réduction par utilisation de la règle 52 (while)


État 26

   63 exp: NOT . exp

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 59
    app  aller à l'état 39


État 27

   53 exp: MOINS . exp

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 60
    app  aller à l'état 39


État 28

   62 exp: STAR . exp

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 61
    app  aller à l'état 39


État 29

    2 block: decl_list inst_list .

    $défaut  réduction par utilisation de la règle 2 (block)


État 30

   32 inst_list: inst . PV inst_list
   33          | inst .

    PV  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 33 (inst_list)


État 31

   36 inst: aff .

    $défaut  réduction par utilisation de la règle 36 (inst)


État 32

   37 inst: ret .

    $défaut  réduction par utilisation de la règle 37 (inst)


État 33

   38 inst: cond .

    $défaut  réduction par utilisation de la règle 38 (inst)


État 34

   45 cond: if . bool_cond inst

    PO  décalage et aller à l'état 63

    bool_cond  aller à l'état 64


État 35

   46 cond: else . inst

    NUMI    décalage et aller à l'état 16
    NUMF    décalage et aller à l'état 17
    ID      décalage et aller à l'état 18
    AO      décalage et aller à l'état 19
    PO      décalage et aller à l'état 20
    PV      décalage et aller à l'état 21
    RETURN  décalage et aller à l'état 22
    IF      décalage et aller à l'état 23
    ELSE    décalage et aller à l'état 24
    WHILE   décalage et aller à l'état 25
    NOT     décalage et aller à l'état 26
    MOINS   décalage et aller à l'état 27
    STAR    décalage et aller à l'état 28

    inst   aller à l'état 65
    aff    aller à l'état 31
    ret    aller à l'état 32
    cond   aller à l'état 33
    if     aller à l'état 34
    else   aller à l'état 35
    loop   aller à l'état 36
    while  aller à l'état 37
    exp    aller à l'état 38
    app    aller à l'état 39


État 36

   39 inst: loop .

    $défaut  réduction par utilisation de la règle 39 (inst)


État 37

   50 loop: while . while_cond inst

    PO  décalage et aller à l'état 66

    while_cond  aller à l'état 67


État 38

   42 aff: exp . STAR EQ exp
   54 exp: exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    AND    décalage et aller à l'état 68
    OR     décalage et aller à l'état 69
    DIFF   décalage et aller à l'état 70
    EQUAL  décalage et aller à l'état 71
    SUP    décalage et aller à l'état 72
    INF    décalage et aller à l'état 73
    PLUS   décalage et aller à l'état 74
    MOINS  décalage et aller à l'état 75
    STAR   décalage et aller à l'état 76
    DIV    décalage et aller à l'état 77
    DOT    décalage et aller à l'état 78
    ARR    décalage et aller à l'état 79


État 39

   72 exp: app .

    $défaut  réduction par utilisation de la règle 72 (exp)


État 40

    3 decl_list: decl decl_list .

    $défaut  réduction par utilisation de la règle 3 (decl_list)


État 41

    5 decl: var_decl PV .

    $défaut  réduction par utilisation de la règle 5 (decl)


État 42

    6 decl: struct_decl PV .

    $défaut  réduction par utilisation de la règle 6 (decl)


État 43

   15 fun_head: ID . PO PF
   16         | ID . PO params PF
   21 did: ID .

    PO  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 21 (did)


État 44

   13 fun_decl: type fun .

    $défaut  réduction par utilisation de la règle 13 (fun_decl)


État 45

   14 fun: fun_head . fun_body

    AO  décalage et aller à l'état 81

    fun_body  aller à l'état 82


État 46

    8 var_decl: type vlist .

    $défaut  réduction par utilisation de la règle 8 (var_decl)


État 47

   19 vlist: did . vir vlist
   20      | did .

    VIR  décalage et aller à l'état 83

    $défaut  réduction par utilisation de la règle 20 (vlist)

    vir  aller à l'état 84


État 48

   31 pointer: STAR .

    $défaut  réduction par utilisation de la règle 31 (pointer)


État 49

   24 type: typename pointer .
   30 pointer: pointer . STAR

    STAR  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 24 (type)


État 50

   10 struct: AO . attr AF

    TINT    décalage et aller à l'état 1
    TFLOAT  décalage et aller à l'état 2
    STRUCT  décalage et aller à l'état 86
    VOID    décalage et aller à l'état 4

    attr      aller à l'état 87
    type      aller à l'état 88
    typename  aller à l'état 13


État 51

    9 struct_decl: STRUCT ID struct .

    $défaut  réduction par utilisation de la règle 9 (struct_decl)


État 52

   73 app: ID PO . args PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 75 (args)

    exp      aller à l'état 89
    app      aller à l'état 39
    args     aller à l'état 90
    arglist  aller à l'état 91


État 53

   41 aff: ID EQ . exp

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 92
    app  aller à l'état 39


État 54

   35 inst: AO block . AF

    AF  décalage et aller à l'état 93


État 55

   59 exp: ID .
   73 app: ID . PO args PF

    PO  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 59 (exp)


État 56

   54 exp: exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   58    | PO exp . PF
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    PF     décalage et aller à l'état 94
    AND    décalage et aller à l'état 68
    OR     décalage et aller à l'état 69
    DIFF   décalage et aller à l'état 70
    EQUAL  décalage et aller à l'état 71
    SUP    décalage et aller à l'état 72
    INF    décalage et aller à l'état 73
    PLUS   décalage et aller à l'état 74
    MOINS  décalage et aller à l'état 75
    STAR   décalage et aller à l'état 95
    DIV    décalage et aller à l'état 77
    DOT    décalage et aller à l'état 78
    ARR    décalage et aller à l'état 79


État 57

   44 ret: RETURN PO . PF
   58 exp: PO . exp PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    PF     décalage et aller à l'état 96
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 56
    app  aller à l'état 39


État 58

   43 ret: RETURN exp .
   54 exp: exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    AND    décalage et aller à l'état 68
    OR     décalage et aller à l'état 69
    DIFF   décalage et aller à l'état 70
    EQUAL  décalage et aller à l'état 71
    SUP    décalage et aller à l'état 72
    INF    décalage et aller à l'état 73
    PLUS   décalage et aller à l'état 74
    MOINS  décalage et aller à l'état 75
    STAR   décalage et aller à l'état 95
    DIV    décalage et aller à l'état 77
    DOT    décalage et aller à l'état 78
    ARR    décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 43 (ret)


État 59

   54 exp: exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   63    | NOT exp .
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    $défaut  réduction par utilisation de la règle 63 (exp)


État 60

   53 exp: MOINS exp .
   54    | exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    $défaut  réduction par utilisation de la règle 53 (exp)


État 61

   54 exp: exp . PLUS exp
   55    | exp . MOINS exp
   56    | exp . STAR exp
   57    | exp . DIV exp
   62    | STAR exp .
   64    | exp . INF exp
   65    | exp . SUP exp
   66    | exp . EQUAL exp
   67    | exp . DIFF exp
   68    | exp . AND exp
   69    | exp . OR exp
   70    | exp . ARR ID
   71    | exp . DOT ID

    $défaut  réduction par utilisation de la règle 62 (exp)


État 62

   32 inst_list: inst PV . inst_list

    NUMI    décalage et aller à l'état 16
    NUMF    décalage et aller à l'état 17
    ID      décalage et aller à l'état 18
    AO      décalage et aller à l'état 19
    PO      décalage et aller à l'état 20
    PV      décalage et aller à l'état 21
    RETURN  décalage et aller à l'état 22
    IF      décalage et aller à l'état 23
    ELSE    décalage et aller à l'état 24
    WHILE   décalage et aller à l'état 25
    NOT     décalage et aller à l'état 26
    MOINS   décalage et aller à l'état 27
    STAR    décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 34 (inst_list)

    inst_list  aller à l'état 97
    inst       aller à l'état 30
    aff        aller à l'état 31
    ret        aller à l'état 32
    cond       aller à l'état 33
    if         aller à l'état 34
    else       aller à l'état 35
    loop       aller à l'état 36
    while      aller à l'état 37
    exp        aller à l'état 38
    app        aller à l'état 39


État 63

   47 bool_cond: PO . exp PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 98
    app  aller à l'état 39


État 64

   45 cond: if bool_cond . inst

    NUMI    décalage et aller à l'état 16
    NUMF    décalage et aller à l'état 17
    ID      décalage et aller à l'état 18
    AO      décalage et aller à l'état 19
    PO      décalage et aller à l'état 20
    PV      décalage et aller à l'état 21
    RETURN  décalage et aller à l'état 22
    IF      décalage et aller à l'état 23
    ELSE    décalage et aller à l'état 24
    WHILE   décalage et aller à l'état 25
    NOT     décalage et aller à l'état 26
    MOINS   décalage et aller à l'état 27
    STAR    décalage et aller à l'état 28

    inst   aller à l'état 99
    aff    aller à l'état 31
    ret    aller à l'état 32
    cond   aller à l'état 33
    if     aller à l'état 34
    else   aller à l'état 35
    loop   aller à l'état 36
    while  aller à l'état 37
    exp    aller à l'état 38
    app    aller à l'état 39


État 65

   46 cond: else inst .

    $défaut  réduction par utilisation de la règle 46 (cond)


État 66

   51 while_cond: PO . exp PF

    NUMI   décalage et aller à l'état 16
    NUMF   décalage et aller à l'état 17
    ID     décalage et aller à l'état 55
    PO     décalage et aller à l'état 20
    NOT    décalage et aller à l'état 26
    MOINS  décalage et aller à l'état 27
    STAR   décalage et aller à l'état 28

    exp  aller à l'état 100
    app  aller à l'état 39


État 67

   50 loop: while while_cond . inst

    NUMI    décalage et aller à l'état 16
    NUMF    décalage et aller à l'état 17
    ID      décalage et aller à l'état 18
    AO      décalage et aller à l'état 19
    PO      décalage et aller à l'état 20
    PV      décalage et aller à l'état 21
    RETURN  décalage et aller à l'état 22
    IF      décalage et aller à l'état 23
    ELSE    décalage et aller à l'état 24
    WHILE   décalage et aller à l'état 25
    NOT     décalage et aller à l'état 26
    MOINS   décalage et aller à l'état 27
    STAR    décalage et aller à l'état 28
